log/build_2025-04-23_18-13-54/p2_kf_adr/stdout_stderr.log
running egg_info
writing build/p2_kf_adr/p2_kf_adr.egg-info/PKG-INFO
writing dependency_links to build/p2_kf_adr/p2_kf_adr.egg-info/dependency_links.txt
writing entry points to build/p2_kf_adr/p2_kf_adr.egg-info/entry_points.txt
writing requirements to build/p2_kf_adr/p2_kf_adr.egg-info/requires.txt
writing top-level names to build/p2_kf_adr/p2_kf_adr.egg-info/top_level.txt
reading manifest file 'build/p2_kf_adr/p2_kf_adr.egg-info/SOURCES.txt'
writing manifest file 'build/p2_kf_adr/p2_kf_adr.egg-info/SOURCES.txt'
running build
running build_py
copying p2_kf_adr/kf_estimation.py -> /home/student/ros2_ws/src/p2_kf_adr/build/p2_kf_adr/build/lib/p2_kf_adr
running install
running install_lib
copying /home/student/ros2_ws/src/p2_kf_adr/build/p2_kf_adr/build/lib/p2_kf_adr/kf_estimation.py -> /home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr
byte-compiling /home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr/kf_estimation.py to kf_estimation.cpython-310.pyc
  File "/home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr/kf_estimation.py", line 131
    q = quaternion_from_euler(0, 0, float(yaw)
                             ^
SyntaxError: '(' was never closed

running install_data
running install_egg_info
removing '/home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr-0.0.0-py3.10.egg-info' (and everything under it)
Copying build/p2_kf_adr/p2_kf_adr.egg-info to /home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/python3.10/site-packages/p2_kf_adr-0.0.0-py3.10.egg-info
running install_scripts
Installing kf_estimation script to /home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/p2_kf_adr
Installing kf_estimation_vel script to /home/student/ros2_ws/src/p2_kf_adr/install/p2_kf_adr/lib/p2_kf_adr
writing list of installed files to '/home/student/ros2_ws/src/p2_kf_adr/build/p2_kf_adr/install.log'
